# Ripple_Project

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  file_structure.sh  mypy.ini
src/: README.md  backend.dockerfile  prestart.sh  pyproject.toml
src/app/: backend_pre_start.py  config.py  exceptions.py  main.py  utilities.py
src/app/auth/: crud.py  deps.py  exceptions.py  models.py  router.py  schemas.py  security.py  service.py
src/app/db/: base.py  init_db.py  session.py
src/app/featured/: crud.py  models.py  router.py  schemas.py
src/app/middlewares/: exception.py
src/app/payment/: crud.py  models.py  router.py  schemas.py  utils.py
src/app/project/: crud.py  models.py  router.py  schemas.py
src/app/project_categories/: crud.py  deps.py  models.py  router.py  schemas.py
src/app/user/: crud.py  deps.py  models.py  router.py  schemas.py
